# OpenSourceDataDiode

./: CODE_OF_CONDUCT.md  Cargo.toml  Change_log.md  Code of Conduct  Contributors guide.md  Contributors.md  README.md  contributors.md  contributors_guide.md
Examples/: Packetloss_explained.md  Simple data diode proxy examples.md  datadiode_hardware_setups.md
Filters/filter/: Cargo.toml
Filters/filter/src/: arguments.rs  errors.rs
Framework/logging/src/: errors.rs  lib.rs
Framework/osdd/: Cargo.toml
Framework/osdd/src/: docker_runner.rs  lib.rs  read_toml.rs  udp_multiplexer_stats.rs
Framework/socket_utils/src/: buffered_socket_reader.rs  errors.rs  socket_writer.rs
General_docs/: design_choices.md  installation.md
General_docs/About the OSDD/: OnePager OSDD (4).docx
Hardware_v1.0/: OSDD_max10.pof  OSDD_max10.sof  README
Hardware_v1.0/documentation/: OSDD.vsd
Hardware_v1.0/source/vhdl_gen/: GPIO_DDIO_out.cmp  GPIO_DDIO_out.qip  GPIO_DDIO_out.sip  GPIO_DDIO_out.spd  GPIO_DDIO_out_sim.f
Hardware_v1.0/source/vhdl_source/: OSDD_MDIO_interface.vhd  OSDD_ethernet.vhd
Hardware_v1.0/test/: README
Protocol_handlers/ph_kafka/src/: producer.rs
Protocol_handlers/ph_mock_handler/: Cargo.toml
Protocol_handlers/ph_mock_handler/src/: arguments.rs  lib.rs
Set-up_examples/: Packetloss_explained.md  README.md  Simple data diode proxy examples.md  Update 25_euro_data-diode_demonstator.md  datadiode_hardware_setups.md
docs/: config_file_explanation.md  design_choices.md  installation.md
filters/filter/src/: lib.rs
framework/bip_utils/: Cargo.toml
framework/bip_utils/src/: lib.rs
framework/framework_constants/: Cargo.toml
framework/framework_constants/src/: lib.rs
framework/logging/: Cargo.toml
framework/osdd/src/: errors.rs
framework/socket_utils/: Cargo.toml
framework/socket_utils/src/: buffered_socket_writer.rs  (+2 more)
framework/transport_udp/: Cargo.toml
framework/transport_udp/src/: errors.rs  lib.rs
framework/transport_udp/src/rx/: inner_udp_receiver.rs  mod.rs
framework/transport_udp/src/tx/: mod.rs  special_message.rs  tx_arguments.rs  udp_sender.rs
framework/transport_udp/tests/: receiver_test.rs
general_docs/: design_choices.md
hardware_v1.0/: README
press/: Background Information about the OSDD.docx  OnePager  OnePager OSDD - English.docx  Readme  Readme.md
press/About the OSDD/: (ENG) 220523 – Societal Business Case (1).docx
press/External_content/: readme.md
press_and_external_content/external_content/: readme.md
protocol_handlers/ph_kafka/: Cargo.toml
protocol_handlers/ph_kafka/src/: arguments.rs  consumer.rs  errors.rs  lib.rs
protocol_handlers/ph_kafka/tests/: ph_kafka_integration_test.rs
protocol_handlers/ph_udp/: Cargo.toml
protocol_handlers/ph_udp/src/: arguments.rs  errors.rs  lib.rs
scripts/: Dockerfile  create_image.sh  create_images.sh  create_tars.sh  osdd.service
set-up_examples/: datadiode_hardware_setups.md  update_25_euro_data-diode_demonstator.md
settings/egress/: Config.toml
settings/ingress/: Config.toml
statistics/statistics_handler/: Cargo.toml
use_cases/: netcat-diode.md
(+20 files in other folders)
