[package]
name = "transport_udp"
version = "0.1.0"
edition = "2018"

[dependencies]
bip_utils = { path= "../bip_utils" }
socket_utils = { path= "../socket_utils" }
framework_constants = { path= "../framework_constants"}
logging = { path= "../logging"}
statistics_handler = { path = "../../statistics/statistics_handler"}

lazy_static = "1.4.0"
log = "0.4.8"
spsc-bip-buffer = "0.2.1"
statsd = "0.13.0"
structopt = {version = "0.3.7", default-features = false}
syslog = "5.0.0"
error-chain = "0.12.1"
